z-index fix

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -3,6 +3,11 @@
     margin-top: 150px;
 }
 
+.App .Logo {
+    position: relative;
+    z-index: 10;
+}
+
 .App .Logo img {
     max-width: 100%;
     width: 230px;
